@@ -1,6 +1,6 @@
-"""SCons.Tool.gas
+"""engine.SCons.Tool.sgif77
 
-Tool-specific initialization for as, the Gnu assembler.
+Tool-specific initialization for SGI f77 Fortran compiler.
 
 There normally shouldn't be any need to import this module directly.
 It will usually be imported through the generic SCons.Tool.Tool()
@@ -39,29 +39,31 @@ import SCons.Defaults
 import SCons.Tool
 import SCons.Util
 
-assemblers = ['as', 'gas']
+compilers = ['f77']
 
-ASSuffixes = ['.s', '.asm', '.ASM']
-ASPPSuffixes = ['.spp', '.SPP']
-if os.path.normcase('.s') == os.path.normcase('.S'):
-    ASSuffixes.extend(['.S'])
-else:
-    ASPPSuffixes.extend(['.S'])
+F77Suffixes = ['.f', '.for', '.FOR']
+F77PPSuffixes = ['.fpp', '.FPP']
 
 def generate(env, platform):
-    """Add Builders and construction variables for as to an Environment."""
+    """Add Builders and construction variables for g77 to an Environment."""
     static_obj, shared_obj = SCons.Tool.createObjBuilders(env)
 
-    for suffix in ASSuffixes:
-        static_obj.add_action(suffix, SCons.Defaults.ASAction)
+    for suffix in F77Suffixes:
+        static_obj.add_action(suffix, SCons.Defaults.F77Action)
+        shared_obj.add_action(suffix, SCons.Defaults.ShF77Action)
 
-    for suffix in ASPPSuffixes:
-        static_obj.add_action(suffix, SCons.Defaults.ASPPAction)
+    for suffix in F77PPSuffixes:
+        static_obj.add_action(suffix, SCons.Defaults.F77PPAction)
+        shared_obj.add_action(suffix, SCons.Defaults.ShF77PPAction)
 
-    env['AS']        = env.Detect(assemblers) or 'as'
-    env['ASFLAGS']   = ''
-    env['ASCOM']     = '$AS $ASFLAGS -o $TARGET $SOURCES'
-    env['ASPPCOM']   = '$CC $ASFLAGS $CPPFLAGS $_CPPINCFLAGS -c -o $TARGET $SOURCES'
+    env['F77']        = env.Detect(compilers) or 'f77'
+    env['F77FLAGS']   = ''
+    env['F77COM']     = '$F77 $F77FLAGS $_F77INCFLAGS -c -o $TARGET $SOURCES'
+    env['F77PPCOM']   = '$F77 $F77FLAGS $CPPFLAGS $_F77INCFLAGS -c -o $TARGET $SOURCES'
+    env['SHF77']      = '$F77'
+    env['SHF77FLAGS'] = '$F77FLAGS -fPIC'
+    env['SHF77COM']   = '$SHF77 $SHF77FLAGS $_F77INCFLAGS -c -o $TARGET $SOURCES'
+    env['SHF77PPCOM'] = '$SHF77 $SHF77FLAGS $CPPFLAGS $_F77INCFLAGS -c -o $TARGET $SOURCES'
 
 def exists(env):
-    return env.Detect(assemblers)
+    return env.Detect(compilers)
